# HOPE

aes_benchmark/: CMakeLists.txt
aes_benchmark/src/: aes_example  main.cpp
cppaillier/: paillier.cpp  paillier.h  test.cpp
